--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.31.2",
     "lucide-react": "^0.390.0",
+    "mysql2": "^3.10.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
@@ -33,6 +35,7 @@
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
+    "drizzle-kit": "^0.22.6",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.1.0",
